:hammer: fixed overflow stuff

--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -277,3 +277,7 @@ button.modal-close {
 button.modal-close:hover {
     font-weight: bold;
 }
+
+.hide-overflow {
+    overflow: hidden;
+}
